<resources>
    <string name="app_name">Meus Imovéis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resgistrar_se">INICIAR</string>
    <string name="realizar_login">LOGIN</string>
    <string name="sou_cadastrado">SOU CADASTRADO</string>
    <string name="nome_administrador">Nome Administrador</string>
    <string name="telefone">Telefone</string>

    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="senha">Senha</string>
    <string name="nome_fantansia">Nome Fantasia</string>
    <string name="cep">CEP</string>
    <string name="rua">Rua</string>
    <string name="numero">Numero</string>
    <string name="ponto_de_referencia">Ponto de Referência</string>
    <string name="juros_do_dia">Juros ao dia</string>
    <string name="juros_do_mes">Juros ao mês</string>
    <string name="registre_imovel">Registre o Imóvel que você administra</string>
    <string name="informacoes_importantes">Informações Básicas...</string>
    <string name="registrar_quartos">Não se preocupe esse cadastro será realizado apenas uma vez.</string>
    <string name="locatario">Nome Locatário</string>
    <string name="valor_quarto">Valor quarto</string>
    <string name="moveis">Movéis: </string>
    <string name="identificacao_quarto">Identificação do quarto</string>
    <string name="adicionar_mais_algum">Adicionar mais algum ?</string>
    <string name="vago">Vago</string>
    <string name="ocupado">Ocupado</string>
    <string name="ventilador">Ventilador</string>
    <string name="ar_condicionado">Ar condicionado</string>
    <string name="televisao">Televisão</string>
    <string name="rack">Rack</string>
    <string name="armario">Armário</string>
    <string name="cama">Cama</string>
    <string name="bairro">Bairro</string>
    <string name="campo_obrigatorio">Campo Obrigatório.</string>
    <string name="aguarde">aguarde</string>
    <string name="cidade">Cidade</string>
    <string name="senhas_diferentes">Senhas Diferentes</string>
    <string name="tamanho_senha">A senha deve ter no mínimo 6 dígitos.</string>
    <string name="email_invalido">E-Mail inválido</string>
    <string name="senha_invalido">Senha inválida</string>
    <string name="account_name">ACCOUNT NAME</string>
    <string name="password">SENHA</string>
    <string name="password_hint">**************</string>
    <string name="forgot_your_login_info">Esqueceu a senha?</string>
    <string name="sign_in">Entrar</string>
    <string name="remember_my_password">Lebrar minha senha</string>
    <string name="email">Email</string>
    <string name="opcao_nenhum">[NENHUM]</string>
    <string name="informe_cep">Informe o CEP primeiro</string>
    <string name="alugado">Alugado</string>
    <string name="propio">Própio</string>
    <string name="valor">Valor Aluguel</string>
    <string name="estado">Estado</string>
    <string name="nome_imovel">In the Material Design system, there are two light sources. One is a key light that sits above the top of the screen</string>
    <string name="numero_de_quartos">Quartos </string>

    <string-array name="detalhe_quarto_page_titles">
        <item>Detalhes</item>
        <item>Gastos</item>
        <item>Melhorias</item>
    </string-array>


    <string-array name="estados_brasileiros">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>


    <string-array name="situacao">
        <item>Selecione</item>
        <item>Alugado</item>
        <item>Própio</item>

    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="whatsapp">WhatsApp</string>
    <string name="data_saida">Data Saida</string>
    <string name="data_de_entrada">Data de entrada</string>
    <string name="morador">Morador</string>
    <string name="morador_ja_cadastrado">Morador já cadastrado</string>

    <string name="salvar">Salvar</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="adicionar_quartos">Adicionar Quartos</string>
    <string name="quarto_ja_cadastrado">O quarto já foi cadastrado.</string>
    <string name="title_activity_teste">Teste</string>
    <string name="nome_movel">Nome movél</string>
    <string name="adicionar_check_informacao">Adicione os movéis que existem no quarto.</string>
    <string name="title_activity_exemplo_table">ExemploTableActivit</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="gastos">Gastos</string>
    <string name="compromissos">Compromissos</string>
    <string name="inicio">Inicio</string>
    <string name="palma_imoveis">Seus imóveis na palma da mão.</string>
    <string name="meus_imoveis">Meus Imóveis</string>
    <string name="sair">Sair</string>
    <string name="adicionar_imovel">Adicionar imovél</string>
</resources>
