<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="@dimen/nav_header_vertical_spacing"
    android:layout_marginLeft="@dimen/nav_header_vertical_spacing"
    android:layout_marginRight="@dimen/nav_header_vertical_spacing"
    android:layout_marginStart="@dimen/nav_header_vertical_spacing"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".fragments.CadastroQuartoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtIdentificacaoQuarto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/identificacao_quarto"
            />

        <com.devspark.robototextview.widget.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/moveis" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/cama" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/armario" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/rack" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/televisao" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <CheckBox
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ar_condicionado" />

            <CheckBox
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ventilador" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/adicionar_mais_algum" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ocupado" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vago" />
        </RadioGroup>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtLocatario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/locatario"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:robotoTypeface="roboto_condensed_bold_italic" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:maxLength="17"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:robotoTypeface="roboto_condensed_bold_italic" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtWhats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/whatsapp"
            android:inputType="phone"
            android:maxLength="17"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:robotoTypeface="roboto_condensed_bold_italic" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor_quarto" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/dataEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_de_entrada" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/dataSaida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_saida" />

    </LinearLayout>


</ScrollView>

